Revert r811419 at Scott's demand on dev ML (issue on Safari on Mac or Linux)
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@812022 13f79535-47bb-0310-9956-ffa450edef68

--- a/framework/images/webapp/images/ecommain.css
+++ b/framework/images/webapp/images/ecommain.css
@@ -304,7 +304,6 @@ margin:0 0 0 10px;
 #ecom-mainarea .center {
 margin-left:201px;
 margin-right:261px;
-overflow:hidden;
 voice-family:inherit;
 }
 
